Full site update

--- a/less/style.less
+++ b/less/style.less
@@ -1,9 +1,4 @@
-@bg-color: #fefefe;
-@fg-color: #323232;
-@darker-bg-color: #dcdcdc;
-@darker-fg-color: #000;
-@link-color: #3366CC;
-
+@import "colors.less";
 
 *,
 *:after,
@@ -154,7 +149,6 @@ table tr th:last-child {
     border-right: 0;
 }
 
-
 img {
   max-width: 100%;
 }
@@ -299,7 +293,7 @@ img {
       margin: 3.0rem 0 1.0rem 0;
       padding: 0;
       li {
-        display: inline;
+        display: inline-block;
         position: relative;
         a {
           text-transform: uppercase;
