--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,9 @@
-@import "colors.less";
+@bg-color: #fefefe;
+@fg-color: #323232;
+@darker-bg-color: #dcdcdc;
+@darker-fg-color: #000;
+@link-color: #3366CC;
+
 
 *,
 *:after,
@@ -149,6 +154,7 @@ table tr th:last-child {
     border-right: 0;
 }
 
+
 img {
   max-width: 100%;
 }
@@ -293,7 +299,7 @@ img {
       margin: 3.0rem 0 1.0rem 0;
       padding: 0;
       li {
-        display: inline-block;
+        display: inline;
         position: relative;
         a {
           text-transform: uppercase;
